<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".fragments.EditUserFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <TextView
            android:labelFor="@+id/info_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="16sp"
            android:text="@string/current_username" />

        <TextView
            android:id="@+id/info_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="120dp"
            android:ems="12"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <TextView
            android:labelFor="@+id/userName_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:gravity="center"
            android:text="@string/new_username" />

        <EditText
            android:id="@+id/userName_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:minWidth="120dp"
            android:ems="12"
            android:textSize="16sp"
            tools:ignore="TouchTargetSizeCheck"
            android:importantForAutofill="no" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <Button
        android:id="@+id/update_username_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_username" />
    <View
        android:layout_width="match_parent"
        android:layout_height="20dp" />
    <Button
        android:id="@+id/back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_button"/>

</LinearLayout>