<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".fragments.UserProfileFragment">

    <View
        android:layout_width="match_parent"
        android:layout_height="40dp" />
    <!-- userstuff here -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <TextView
            android:labelFor="@+id/userName_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_gravity="center"
            android:text="@string/user_name" />

        <TextView
            android:id="@+id/userName_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="120dp"
            android:ems="12"
            android:textSize="16sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <TextView
            android:labelFor="@+id/userMail_text"
            android:layout_width="match_parent"
            android:textSize="16sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/user_mail" />

        <TextView
            android:id="@+id/userMail_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="120dp"
            android:ems="12"
            android:textSize="16sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="20dp" />
    <Button
        android:id="@+id/edit_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_user"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="20dp" />
    <Button
        android:id="@+id/signOutBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_out"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <!-- List of all scooters / rides -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/ridelist"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:reverseLayout="true"
        android:textSize="12sp" />


</LinearLayout>